test/testdata/classes/inheritance/super_inside_class_without_superclass_error.lox
class Class {
  method() {
    // error: 'super' can only be used inside a subclass
    // lint error: 'super' can only be used inside a subclass
    super.method();
  }
}

_ = Class;
